hover effect on mobile fix

--- a/src/components/Navbar/Navbar.style.scss
+++ b/src/components/Navbar/Navbar.style.scss
@@ -17,6 +17,23 @@ a {
         height: 3px;
         background-color: var(--orange);
     }
+
+    @media (max-width: 1000px) {
+        &:hover {
+            position: relative;
+            cursor: pointer;
+        }
+
+        &:hover::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: -5px;
+            width: 100%;
+            height: 3px;
+            background-color: var(--orange);
+        }
+    }
 }
 
 li {
